[tool.poetry]
name = "active_fairness"
version = "0.1.0"
description = "Code for the paper \"Can Active Learning Preemptively Mitigate Fairness Issues?\"."
authors = ["fr.branchaud-charron <fr.branchaud-charron@servicenow.com>"]

packages = [
    { include = "active_fairness/" },
]

[tool.poetry.dependencies]
python = "^3.8"
baal = "^1.3.0"
fairlearn = "^0.6.0"
pytorch-revgrad = {git = "https://github.com/janfreyberg/pytorch-revgrad.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
